add all endpoint examples; adjust specifications
